[gd_scene load_steps=2 format=3 uid="uid://bhu71ls6cjqlt"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_nk5pa"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nk5pa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.031
anchor_right = 0.974
anchor_bottom = 0.949
offset_left = -0.32
offset_top = -2.088
offset_right = -1.0481
offset_bottom = 0.0479736

[node name="PlayButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.013
anchor_right = 0.977
anchor_bottom = 0.227
offset_left = -4.782
offset_top = 0.239
offset_right = -0.137085
offset_bottom = 1.48099
text = "Play
"

[node name="RestartButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.013
anchor_right = 0.977
anchor_bottom = 0.227
offset_left = -4.782
offset_top = 147.239
offset_right = -0.137085
offset_bottom = 148.481
text = "Restart"

[node name="QuitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.022
anchor_top = 0.013
anchor_right = 0.977
anchor_bottom = 0.227
offset_left = -4.782
offset_top = 293.239
offset_right = -0.137085
offset_bottom = 294.481
text = "Quit"

[connection signal="button_up" from="Panel/PlayButton" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="Panel/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="Panel/QuitButton" to="." method="_on_quit_button_button_up"]
